--- a/package.json
+++ b/package.json
@@ -9,7 +9,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "colors": "^1.0.3",
+    "d3": "^5.12.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-less": "^3.0.2",
+    "gulp-minify-css": "^1.0.0",
+    "gulp-ruby-sass": "^1.0.1",
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-uglify": "^1.1.0",
+    "gulp-watch-path": "^0.0.7",
     "mime": "^2.4.4",
-    "socket.io": "^2.3.0"
-  }
+    "socket.io": "^2.3.0",
+    "stream-combiner2": "^1.0.2"
+  },
+  "dependencies": {}
 }
